fixed margin footer+spacing table

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
     width: 400px;
 }
 
-.article-head, .article, .list{
+.article-head, .article, .list, h3{
     margin: 25px 0;
 }
 
